--- a/inventories/aws_ec2.yml
+++ b/inventories/aws_ec2.yml
@@ -1,7 +1,7 @@
 ---
 plugin: aws_ec2
 regions:
-  - us-east-1     # adjust if needed
+  - us-east-1     # adjust when needed
 filters:
   tag:Environment: dev
 keyed_groups:
