--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,22 +1,21 @@
 ---
-# - name: Configure Nginx servers
-#   hosts: role_nginx
-#   become: true
-#   roles:
-#     - nginx
+- name: Configure Nginx servers
+  hosts: role_nginx
+  become: true
+  roles:
+    - nginx
 
-# - name: Configure Docker servers
-#   hosts: role_docker
-#   become: true
-#   roles:
-#     - docker
+- name: Configure Docker servers
+  hosts: role_docker
+  become: true
+  roles:
+    - docker
 
-# - name: Configure Bastion hosts
-#   hosts: bastion
-#   become: true
-#   roles:
-#     - users   # bastion.yml vars are loaded automatically
-
+- name: Configure Bastion hosts
+  hosts: install_bastion
+  become: true
+  roles:
+    - users   # bastion.yml vars are loaded automatically
 
 - name: Configure users on all servers
   hosts: role_users
@@ -24,10 +23,8 @@
   roles:
     - users
 
-
-# - name: Install Node Exporter
-#   hosts: all
-#   become: true
-#   roles:
-#     - node_exporter
-
+- name: Install Node Exporter
+  hosts: all
+  become: true
+  roles:
+    - node_exporter
