--- a/inventories/aws_ec2.yml
+++ b/inventories/aws_ec2.yml
@@ -7,6 +7,8 @@ filters:
 keyed_groups:
   - key: tags.role
     prefix: role
+  - key: tags.install
+    prefix: install
 hostnames:
   - private-ip-address
 compose:
