--- a/playbooks/roles/users/defaults/main.yml
+++ b/playbooks/roles/users/defaults/main.yml
@@ -1,30 +1,30 @@
 ---
 # Default list of users (safe to override elsewhere)
 users:
-  - name: tee
+  - name: alice
     group: finops
     # ssh_key, ssh_keys, or old_ssh_key can be added here
     sudo: false
 
-  - name: dain
+  - name: bob
     group: netops
     sudo: false
 
-  - name: pat
+  - name: charlie
     group: devsecops
     sudo: false
 
-  - name: tee
+  - name: kuks
     group: admin
     #ssh_key: "{{ lookup('amazon.aws.ssm_parameter', '/users/admin/ssh_key', region='us-east-1', default='') }}"
     sudo: true
 
-  - name: nuella
+  - name: ella
     group: devops
     #ssh_key: "ssh-rsa AAAAB3Nz... alice@laptop"
     sudo: true
 
-  - name: lily
+  - name: lil
     group: finops
     #ssh_key: "ssh-rsa AAAAB3Nz... alice@laptop"
     sudo: true
@@ -37,6 +37,8 @@ sudo_groups:
 # use this generate ssh keys
 # ssh-keygen -t ed25519 -C "finops@example.com" -f ~/.ssh/finops
 
+#Set the default in the role → avoids undefined errors:
+enable_ssh_hardening: false
 
 
 
