--- a/playbooks/roles/users/tasks/main.yml
+++ b/playbooks/roles/users/tasks/main.yml
@@ -49,7 +49,7 @@
   ansible.builtin.systemd:
     name: sshd
     state: restarted
-  when: enable_ssh_hardening
+  when: enable_ssh_hardening | default(false)
 
 # =========================
 # System Updates
@@ -66,27 +66,27 @@
   ansible.builtin.yum:
     name: fail2ban
     state: present
-  when: enable_fail2ban
+  when: enable_fail2ban | default(false)
 
 - name: Enable and start fail2ban
   ansible.builtin.systemd:
     name: fail2ban
     state: started
     enabled: yes
-  when: enable_fail2ban
+  when: enable_fail2ban | default(false)
 
 - name: Install auditd
   ansible.builtin.yum:
     name: audit
     state: present
-  when: enable_auditd
+  when: enable_auditd | default(false)
 
 - name: Enable auditd
   ansible.builtin.systemd:
     name: auditd
     state: started
     enabled: yes
-  when: enable_auditd
+  when: enable_auditd | default(false)
 
 # =========================
 # Monitoring and Logging
@@ -95,7 +95,7 @@
   ansible.builtin.yum:
     name: amazon-cloudwatch-agent
     state: present
-  when: enable_cloudwatch and ansible_distribution == "Amazon"
+  when: enable_cloudwatch | default(false) and ansible_distribution == "Amazon"
 
 # =========================
 # Convenience Tools
@@ -109,4 +109,4 @@
       - telnet
       - bind-utils
     state: present
-  when: enable_convenience_tools
+  when: enable_convenience_tools | default(false)
