--- a/inventories/aws_ec2.yml
+++ b/inventories/aws_ec2.yml
@@ -1,7 +1,7 @@
 ---
 plugin: aws_ec2
 regions:
-  - us-east-1     # adjust when needed
+  - us-east-1
 filters:
   tag:env: dev
 keyed_groups:
@@ -13,3 +13,6 @@ hostnames:
   - private-ip-address
 compose:
   ansible_host: private_ip_address
+
+# 👇 Debug option
+strict: False
