--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,6 @@
+---
 collections:
   - name: amazon.aws
-  - name: community.mysql
-  - name: community.docker
+    version: ">=10.0.0"
+  - name: community.aws
+    version: ">=10.0.0"
