--- a/inventories/aws_ec2.aws_ec2.yml
+++ b/inventories/aws_ec2.aws_ec2.yml
@@ -1,5 +1,5 @@
 ---
-plugin: aws_ec2
+plugin: amazon.aws.aws_ec2
 regions:
   - us-east-1
 filters:
@@ -7,12 +7,45 @@ filters:
 keyed_groups:
   - key: tags.role
     prefix: role
-  - key: tags.install
-    prefix: install
 hostnames:
-  - public-ip-address
+  - public-dns-name
 compose:
-  ansible_host: public_ip_address
+  ansible_host: public_dns_name
 
 # 👇 Debug option
 strict: False
+
+
+
+# ---
+# plugin: amazon.aws.aws_ec2
+# regions:
+#   - us-east-1
+# filters:
+#   tag:env: dev
+# keyed_groups:
+#   - key: tags.role
+#     prefix: role
+# hostnames:
+#   - public-dns-name
+# compose:
+#   ansible_host: public_dns_name
+
+
+# plugin: aws_ec2
+# regions:
+#   - us-east-1
+# filters:
+#   tag:env: dev
+# keyed_groups:
+#   - key: tags.role
+#     prefix: role
+#   - key: tags.install
+#     prefix: install
+# hostnames:
+#   - public-ip-address
+# compose:
+#   ansible_host: public_ip_address
+
+# # 👇 Debug option
+# strict: False
